se agrega descripcion

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Esta es una web de Productos Electronicos</h1>
     <h2>televisores</h2>
+    <p>Televisor LG de 50 pulgadas con pantalla OLED valor $500.000</p>
 </body>
 </html>
