Estructura html5 creacion de estilos y vinculos

--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Mi primera WEB</title>
+    <style>
+         header{
+             background-color:#e4e71b;
+         }
+    </style>
 </head>
 <body>
-    <h1>Esta es una web de Productos Electronicos</h1>
-    <h2>televisores</h2>
-    <p>Televisor LG de 50 pulgadas con pantalla OLED valor $500.000</p>
+    <header>
+        <h1>Ecommerce IPVG</h1>
+    </header>
+    <nav>
+        <a href="http://www.google.cl" target="_blank">GOOGLE</a>
+        <br>
+        <a href="http://www.google.cl" target="_self">GOOGLE</a>
+        <br>
+        <a href="http://www.google.cl" target="_parent">GOOGLE</a>
+        <br>
+        <a href="http://www.google.cl" target="_top">GOOGLE</a>
+        <br>
+        <a href="contacto.html" target="_blank">Contacto</a>
+        <a href="https://www.virginiogomez.cl">
+            <img src="./images/logo.png" alt="">
+        </a>
+        <a href="./asset/reglamento.pdf">Descarga Reglamento</a>
+    </nav>
+    <section>
+        <article>
+            <h2></h2>
+        </article>
+    </section>
+    <aside>
+        <h3>Complementos</h3>
+    </aside>
+    <footer>
+        <h4>footer</h4>
+    </footer>
 </body>
 </html>
