--- a/index.html
+++ b/index.html
@@ -5,42 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Mi primera WEB</title>
-    <style>
-         header{
-             background-color:#e4e71b;
-         }
-    </style>
+    <title>Web Ipvg 2022 - Interfaz de Usuario</title>
 </head>
 <body>
     <header>
-        <h1>Ecommerce IPVG</h1>
+        <h1>Interfaz de Usuario 2022</h1>
     </header>
     <nav>
-        <a href="http://www.google.cl" target="_blank">GOOGLE</a>
-        <br>
-        <a href="http://www.google.cl" target="_self">GOOGLE</a>
-        <br>
-        <a href="http://www.google.cl" target="_parent">GOOGLE</a>
-        <br>
-        <a href="http://www.google.cl" target="_top">GOOGLE</a>
-        <br>
-        <a href="contacto.html" target="_blank">Contacto</a>
-        <a href="https://www.virginiogomez.cl">
-            <img src="./images/logo.png" alt="">
-        </a>
-        <a href="./asset/reglamento.pdf">Descarga Reglamento</a>
+        <ul id="menu-principal">
+            <li class="menu"><a href="">Inicio</a></li>
+            <li class="menu"><a href="">Quienes Somos</a></li>
+            <li class="menu"><a href="">Publicaciones</a></li>
+            <li class="menu"><a href="">Servicios</a></li>
+            <li class="menu"><a href="">Contacto</a></liclass="menu">
+        </ul>
     </nav>
     <section>
         <article>
-            <h2></h2>
+            <header>
+                <h2>Noticias</h2>
+            </header>
+            <section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore explicabo libero eligendi eos quibusdam similique perspiciatis vel iste sapiente, ad exercitationem recusandae at optio est laboriosam quam! Ut, tenetur?</p>
+                <ul>
+                    <li>Noticias Locales</li>
+                    <li>Noticias Nacionales</li>
+                    <li>Noticias Internacionales</li>
+                </ul>
+            </section>
         </article>
     </section>
-    <aside>
-        <h3>Complementos</h3>
-    </aside>
     <footer>
-        <h4>footer</h4>
+        <p>Todos los derechos reservador 2022</p>
     </footer>
 </body>
 </html>
