se agrega libreria fontawasome

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/f5e1f3458c.js" crossorigin="anonymous"></script>
     <title>Web Ipvg 2022 - Interfaz de Usuario</title>
 </head>
 <body>
@@ -13,11 +14,11 @@
     </header>
     <nav>
         <ul id="menu-principal">
-            <li class="menu"><a href="">Inicio</a></li>
-            <li class="menu"><a href="">Quienes Somos</a></li>
-            <li class="menu"><a href="">Publicaciones</a></li>
-            <li class="menu"><a href="">Servicios</a></li>
-            <li class="menu"><a href="">Contacto</a></liclass="menu">
+            <li class="menu"><a href=""><i class="fa-solid fa-house-chimney"></i><span>Inicio</span></a></li>
+            <li class="menu"><a href=""><i class="fa-solid fa-people-group"></i><span>Quienes Somos</span></a></li>
+            <li class="menu"><a href=""><i class="fa-solid fa-folder-open"></i><span>Publicaciones</span></a></li>
+            <li class="menu"><a href=""><i class="fa-solid fa-laptop"></i><span>Servicios</span></a></li>
+            <li class="menu"><a href=""><i class="fa-solid fa-envelope"></i><span>Contacto</span></a></liclass="menu">
         </ul>
     </nav>
     <section>
@@ -36,7 +37,10 @@
         </article>
     </section>
     <footer>
+
         <p>Todos los derechos reservador 2022</p>
     </footer>
+  
+
 </body>
 </html>
