--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Web Ipvg 2022 - Interfaz de Usuario</title>
 </head>
 <body>
-    <header>
+    <header id="principal">
         <h1>Interfaz de Usuario 2022</h1>
     </header>
-    <nav>
+    <nav class="contenedor">
         <ul id="menu-principal">
             <li class="menu"><a href=""><i class="fa-solid fa-house-chimney"></i><span>Inicio</span></a></li>
             <li class="menu"><a href=""><i class="fa-solid fa-people-group"></i><span>Quienes Somos</span></a></li>
@@ -21,7 +21,7 @@
             <li class="menu"><a href=""><i class="fa-solid fa-envelope"></i><span>Contacto</span></a></liclass="menu">
         </ul>
     </nav>
-    <section>
+    <section id="contenido" class="contenedor">
         <article>
             <header>
                 <h2>Noticias</h2>
@@ -36,7 +36,7 @@
             </section>
         </article>
     </section>
-    <footer>
+    <footer class="contenedor">
 
         <p>Todos los derechos reservador 2022</p>
     </footer>
