creacion de seccion de noticias-imagenes quienes somos

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -9,7 +9,7 @@
     <title>Web Ipvg 2022 - Interfaz de Usuario</title>
 </head>
 <body>
-    <header id="principal">
+    <header id="principal" style="background-color: brown;">
         <h1>Interfaz de Usuario 2022</h1>
     </header>
     <nav class="contenedor">
@@ -22,9 +22,14 @@
         </ul>
     </nav>
     <section id="contenido" class="contenedor">
+        <article id="imagenarticulo">
+            <section>
+                <img src="./images/noticia1.png" alt="responsive web">
+            </section>
+        </article>
         <article id="textoarticulo">
             <header>
-                <h2>Noticias</h2>
+                <h2>Quienes Somos</h2>
             </header>
             <section>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam tempore explicabo libero eligendi eos quibusdam similique perspiciatis vel iste sapiente, ad exercitationem recusandae at optio est laboriosam quam! Ut, tenetur?</p>
@@ -37,11 +42,7 @@
                 </ul>
             </section>
         </article>
-        <article id="imagenarticulo">
-            <section>
-                <img src="./images/noticia1.png" alt="responsive web">
-            </section>
-        </article>
+        
     </section>
     <footer class="contenedor">
 
