--- a/quienessomos.html
+++ b/quienessomos.html
@@ -16,10 +16,10 @@
         <ul id="menu-principal">
             <li class="menu"><a href="index.html"><i class="fa-solid fa-house-chimney"></i><span>Inicio</span></a></li>
             <li class="menu"><a href="quienessomos.html"><i class="fa-solid fa-people-group"></i><span>Quienes Somos</span></a></li>
-            <li class="menu"><a href=""><i class="fa-solid fa-folder-open"></i><span>Publicaciones</span></a></li>
-            <li class="menu"><a href=""><i class="fa-solid fa-laptop"></i><span>Servicios</span></a></li>
-            <li class="menu"><a href=""><i class="fa-solid fa-envelope"></i><span>Contacto</span></a></liclass="menu">
-        </ul>
+            <li class="menu"><a href="publicaciones.html"><i class="fa-solid fa-folder-open"></i><span>Publicaciones</span></a></li>
+            <li class="menu"><a href="servicios.html"><i class="fa-solid fa-laptop"></i><span>Servicios</span></a></li>
+            <li class="menu"><a href="contacto.html"><i class="fa-solid fa-envelope"></i><span>Contacto</span></a></liclass="menu">
+      </ul>
     </nav>
     <section id="contenido" class="contenedor">
         <article id="imagenarticulo">
